--- a/index.html
+++ b/index.html
@@ -17,22 +17,18 @@
 
 	<body>
 		<div class = "top_info">
-				<div class = "vid1">
-					<br><br>
-					<video width = "800" controls>
-						<source src = "assembly.mp4" type = "video/mp4">
-					</video>
-					<br><br>
-				</div>
-				<div class = "information">
-					<div class = "text">About</div>
-					About about about about about about about about about about about about about
-					About about about about about about about about about about about about about
-					About about about about about about about about about about about about about
-					About about about about about about about about about about about about about
-				</div>
+			<div class = "vid1">
+				<br><br>
+				<video width = "90%" controls>
+					<source src = "assembly.mp4" type = "video/mp4">
+				</video>
+				<br><br>
 			</div>
-		</body>
+			<div class = "information">
+				<div class = "text">About</div>
+				Testing 123, testing 456, testing 123, testing 456 Testing 123, testing 456, testing 123, testing 456 Testing 123, testing 456, testing 123, testing 456
+			</div>
+		</div>
 	</body>
 
 </html>
