--- a/index.html
+++ b/index.html
@@ -18,11 +18,9 @@
 	<body>
 		<div class = "top_info">
 			<div class = "vid1">
-				<br><br>
-				<video width = "90%" controls>
+				<video class = "video" width = "90%" height = "90%" controls>
 					<source src = "assembly.mp4" type = "video/mp4">
 				</video>
-				<br><br>
 			</div>
 			<div class = "information">
 				<div class = "text">About</div>
