--- a/index.html
+++ b/index.html
@@ -24,7 +24,18 @@
 			</div>
 			<div class = "information">
 				<div class = "text">About</div>
-				Testing 123, testing 456, testing 123, testing 456 Testing 123, testing 456, testing 123, testing 456 Testing 123, testing 456, testing 123, testing 456
+				Stark tower was created on CATIA V5. It consists of 5 seperate parts:
+				<br><br>
+				1. Roof<br>
+				2. Circular balcony<br>
+				3. Stark display<br>
+				4. Main body<br>
+				5. Bottom base<br>
+
+				<br>
+				Click <b> here </b> to download a copy of the STL file.
+				<br><br>
+				Interested in more of my CAD modelling work? Click <b> here </b> for my extended portfolio.
 			</div>
 		</div>
 	</body>
