--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				5. Bottom base<br>
 
 				<br>
-				Click <b> here </b> to download a copy of the STL file.
+				Click <a href = "stark_tower.png" download= "" target = "_self"> here </a>to download a copy of the STL file.
 				<br><br>
 				Interested in more of my CAD modelling work? Click <b> here </b> for my extended portfolio.
 			</div>
