--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<br>
 				Click <a href = "stark_tower.png" download= "" target = "_self"> here </a>to download a copy of the STL file.
 				<br><br>
-				Interested in more of my CAD modelling work? Click <b> here </b> for my extended portfolio.
+				Interested in more of my CAD modelling work? Click <b><a href = "https://docs.google.com/presentation/d/1n3hWM__BryeHxx4UFdj5uKPHChJWpvJLqNkfbFDLvT8/edit?usp=sharing" target = "_blank">here </a> </b> for my extended portfolio.
 			</div>
 		</div>
 	</body>
