--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 				5. Bottom base<br>
 
 				<br>
-				Click <a href = "starkTower.stl" download= "" target = "_self"> here </a>to download a copy of the STL file
-				<br>(you may need to resize it).
+				Click <b><a href = "starkTower.stl" download= "" target = "_self"> here </a></b>to download a copy of the STL file.
+				<br>(you may need to resize it)
 				<br><br>
 				Interested in more of my CAD modelling work? Click <b><a href = "https://docs.google.com/presentation/d/1n3hWM__BryeHxx4UFdj5uKPHChJWpvJLqNkfbFDLvT8/edit?usp=sharing" target = "_blank">here </a> </b> for my extended portfolio.
 			</div>
