--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 				Interested in more of my CAD modelling work? Click <b><a href = "https://docs.google.com/presentation/d/1n3hWM__BryeHxx4UFdj5uKPHChJWpvJLqNkfbFDLvT8/edit?usp=sharing" target = "_blank">here </a> </b> for my extended portfolio.
 			</div>
 		</div>
+		<div class = "mid_info">
+			hello there
+
+		</div>
 	</body>
 
 </html>
