first 3 display pics

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<body>
 		<div class = "top_info">
 			<div class = "vid1">
-				<video class = "video" width = "90%" height = "90%" controls>
+				<video width = "90%" height = "90%" controls>
 					<source src = "assembly.mp4" type = "video/mp4">
 				</video>
 			</div>
@@ -39,9 +39,17 @@
 				Interested in more of my CAD modelling work? Click <b><a href = "https://docs.google.com/presentation/d/1n3hWM__BryeHxx4UFdj5uKPHChJWpvJLqNkfbFDLvT8/edit?usp=sharing" target = "_blank">here </a> </b> for my extended portfolio.
 			</div>
 		</div>
+		<br>
 		<div class = "mid_info">
-			hello there
-
+			<div class = "roof">
+				<img src = "stark6.PNG" class = "pic" width = "100%" alt = "">
+			</div>
+			<div class = "circ_balc">
+				<img src = "stark5.PNG" class = "pic" width = "100%" alt = "">
+			</div>
+			<div class = "stark_display">
+				<img src = "stark4.PNG" class = "pic" width = "100%" alt = "">
+			</div>
 		</div>
 	</body>
 
