--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
 				<img src = "stark4.PNG" class = "pic" width = "100%" alt = "">
 			</div>
 		</div>
+		<br>
+		<div class = "bottom_info">
+			<div class = "main_body">
+				<img src = "stark3.PNG" class = "pic" width = "100%" alt = "">
+			</div>
+			<div class = "bottom_base">
+				<img src = "stark7.PNG" class = "pic" width = "100%" alt = "">
+			</div>
+		</div>
 	</body>
 
 </html>
