--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
 				<img src = "stark7.PNG" class = "pic" width = "100%" alt = "">
 			</div>
 		</div>
+		<br>
+		<div class = "final_product">
+
+		</div>
 	</body>
 
 </html>
