--- a/index.html
+++ b/index.html
@@ -62,8 +62,19 @@
 		</div>
 		<br>
 		<div class = "final_product">
-
+			<div class = "final">
+				<img src = "stark2.PNG" class = "pic" width = "100%" alt = "">
+			</div>
+			<div class = "printed">
+				<img src = "3dprint.jpg" class = "pic" width = "100%" alt = "">
+			</div>
+			<div class = "vid2">
+				<video width = "90%" height = "90%" controls>
+					<source src = "viewpoints.webm" type = "video/mp4">
+				</video>
+			</div>
 		</div>
+		
 	</body>
 
 </html>
