--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale = 1.0">
 		<title>Stark Tower</title>
-		<link rel="icon" href="stark_tower.png">
+		<link rel="icon" href="images/stark_tower.png">
 		<link rel = "stylesheet" href="style.css">
 	</head>
 		<nav class = "navbar">
@@ -19,7 +19,7 @@
 		<div class = "top_info">
 			<div class = "vid1">
 				<video width = "90%" height = "90%" controls>
-					<source src = "assembly.mp4" type = "video/mp4">
+					<source src = "videos/assembly.mp4" type = "video/mp4">
 				</video>
 			</div>
 			<div class = "information">
@@ -42,39 +42,39 @@
 		<br>
 		<div class = "mid_info">
 			<div class = "roof">
-				<img src = "stark6.PNG" class = "pic" width = "100%" alt = "">
+				<img src = "images/stark6.PNG" class = "pic" width = "100%" alt = "">
 			</div>
 			<div class = "circ_balc">
-				<img src = "stark5.PNG" class = "pic" width = "100%" alt = "">
+				<img src = "images/stark5.PNG" class = "pic" width = "100%" alt = "">
 			</div>
 			<div class = "stark_display">
-				<img src = "stark4.PNG" class = "pic" width = "100%" alt = "">
+				<img src = "images/stark4.PNG" class = "pic" width = "100%" alt = "">
 			</div>
 		</div>
 		<br>
 		<div class = "bottom_info">
 			<div class = "main_body">
-				<img src = "stark3.PNG" class = "pic" width = "100%" alt = "">
+				<img src = "images/stark3.PNG" class = "pic" width = "100%" alt = "">
 			</div>
 			<div class = "bottom_base">
-				<img src = "stark7.PNG" class = "pic" width = "100%" alt = "">
+				<img src = "images/stark7.PNG" class = "pic" width = "100%" alt = "">
 			</div>
 		</div>
 		<br>
 		<div class = "final_product">
 			<div class = "final">
-				<img src = "stark2.PNG" class = "pic" width = "100%" alt = "">
+				<img src = "images/stark2.PNG" class = "pic" width = "100%" alt = "">
 			</div>
 			<div class = "printed">
-				<img src = "3dprint.jpg" class = "pic" width = "100%" alt = "">
+				<img src = "images/3dprint.jpg" class = "pic" width = "100%" alt = "">
 			</div>
 			<div class = "vid2">
 				<video width = "90%" height = "90%" controls>
-					<source src = "viewpoints.webm" type = "video/mp4">
+					<source src = "videos/viewpoints.webm" type = "video/mp4">
 				</video>
 			</div>
 		</div>
-		
+
 	</body>
 
 </html>
