--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</div>
 			<div class = "information">
 				<div class = "text">About</div>
-				Stark tower was created on CATIA V5. It consists of 5 seperate parts:
+				Stark tower was created on CATIA V5. It consists of 5 seperate sub-assemblies:
 				<br><br>
 				1. Roof<br>
 				2. Circular balcony<br>
